// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with any date and any time (empty time set) 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component>
      <ResetAllFiltersButton
        animationDelay={0}
        animationTime={300}
        onPress={[Function]}
        visible={false}
      />
      <Component
        style={
          Object {
            "marginTop": 16,
            "paddingBottom": 12,
          }
        }
        testID="event-filter-header"
      >
        <FilterHeaderCategories
          onFilterPress={[Function]}
          selectedCategories={Set {}}
        />
      </Component>
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="filter by date: Select dates"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-date-filters-button"
      text="Select dates"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 1,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-area-and-price-filters-button"
      text="Filter by area, price..."
    />
  </Component>
</Component>
`;

exports[`renders correctly with any date and any time 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component>
      <ResetAllFiltersButton
        animationDelay={0}
        animationTime={300}
        onPress={[Function]}
        visible={false}
      />
      <Component
        style={
          Object {
            "marginTop": 16,
            "paddingBottom": 12,
          }
        }
        testID="event-filter-header"
      >
        <FilterHeaderCategories
          onFilterPress={[Function]}
          selectedCategories={Set {}}
        />
      </Component>
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="filter by date: Select dates"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-date-filters-button"
      text="Select dates"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 1,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-area-and-price-filters-button"
      text="Filter by area, price..."
    />
  </Component>
</Component>
`;

exports[`renders correctly with date range and two times 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component>
      <ResetAllFiltersButton
        animationDelay={0}
        animationTime={300}
        onPress={[Function]}
        visible={true}
      />
      <Component
        style={
          Object {
            "marginTop": 16,
            "paddingBottom": 12,
          }
        }
        testID="event-filter-header"
      >
        <FilterHeaderCategories
          onFilterPress={[Function]}
          selectedCategories={Set {}}
        />
      </Component>
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={true}
      badgeValue={null}
      label="filter by date: 2 Feb - 3 Feb"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-date-filters-button"
      text="2 Feb - 3 Feb"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 1,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-area-and-price-filters-button"
      text="Filter by area, price..."
    />
  </Component>
</Component>
`;

exports[`renders correctly with single date and single time 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component>
      <ResetAllFiltersButton
        animationDelay={0}
        animationTime={300}
        onPress={[Function]}
        visible={true}
      />
      <Component
        style={
          Object {
            "marginTop": 16,
            "paddingBottom": 12,
          }
        }
        testID="event-filter-header"
      >
        <FilterHeaderCategories
          onFilterPress={[Function]}
          selectedCategories={Set {}}
        />
      </Component>
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={true}
      badgeValue={null}
      label="filter by date: 2 Feb"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-date-filters-button"
      text="2 Feb"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 1,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="Filter by area, price..."
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-area-and-price-filters-button"
      text="Filter by area, price..."
    />
  </Component>
</Component>
`;

exports[`renders correctly with tag filters selected 1`] = `
<Component
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <ContentPadding
    padding={Object {}}
    style={Object {}}
  >
    <Component>
      <ResetAllFiltersButton
        animationDelay={0}
        animationTime={300}
        onPress={[Function]}
        visible={true}
      />
      <Component
        style={
          Object {
            "marginTop": 16,
            "paddingBottom": 12,
          }
        }
        testID="event-filter-header"
      >
        <FilterHeaderCategories
          onFilterPress={[Function]}
          selectedCategories={Set {}}
        />
      </Component>
    </Component>
  </ContentPadding>
  <Component
    style={
      Object {
        "backgroundColor": "#20215a",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <FilterHeaderButton
      active={false}
      badgeValue={null}
      label="filter by date: Select dates"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-date-filters-button"
      text="Select dates"
    />
    <Component
      style={
        Object {
          "borderColor": "#ffffff",
          "borderLeftWidth": 1,
          "opacity": 0.4,
        }
      }
    />
    <FilterHeaderButton
      active={true}
      badgeValue={2}
      label="Filters"
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="open-area-and-price-filters-button"
      text="Filters"
    />
  </Component>
</Component>
`;
